<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/userGoalInitFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image_mountain_background"
    tools:context="com.epfl.drawyourpath.userProfileCreation.UserGoalsInitFragment">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        tools:context="com.epfl.drawyourpath.userProfileCreation.UserGoalsInitFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="4dp"
            android:text="@string/to_challenge_you_every_days"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_surface"
            android:textIsSelectable="false"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/cardview_shadow_start_color"
            android:justificationMode="inter_word"
            android:padding="5dp"
            android:text="@string/explication_text_goals_init"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_surface"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="5dp"
            android:text="@string/how_many_kilometer_do_you_want_to_run_through_each_day"
            android:textColor="@color/design_default_color_surface"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/input_distanceGoal_text_UserProfileCreation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/design_default_color_surface"
            android:hint="@string/enter_your_distance_goal"
            android:inputType="numberDecimal"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/distanceGoalError_text_userProfileCreation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="5dp"
            android:text="@string/how_many_time_do_you_want_to_practice_exercise_each_day_in_minutes"
            android:textColor="@color/design_default_color_surface"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/input_timeGoal_text_UserProfileCreation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/design_default_color_surface"
            android:hint="@string/enter_your_time"
            android:inputType="numberDecimal"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/timeGoalError_text_userProfileCreation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="5dp"
            android:text="@string/how_many_path_do_you_want_to_draw_each_day"
            android:textColor="@color/design_default_color_surface"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/input_nbOfPathsGoal_text_UserProfileCreation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:background="@color/design_default_color_surface"
            android:hint="@string/enter_your_number_of_path"
            android:inputType="numberDecimal"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/nbOfPathsGoalError_text_userProfileCreation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="10dp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/setUserGoals_button_userProfileCreation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/validate"
            android:textSize="40sp" />
    </LinearLayout>

</FrameLayout>