...
    <string name="enter_your_firstname">Enter your firstname</string>
    <string name="enter_your_surname">Enter your surname</string>
    <string name="your_date_of_birth">Your date of birth :</string>
    <string name="profile_image">User\'s profile image</string>
    <string name="add_friend">add friend</string>
    <string name="friend_search_hint">Search for users...</string>
    <string name="empty_date_view">dd/mm/yyyy</string>
    <string name="select_a_date">Select a date</string>
    <string name="to_challenge_you_every_days">To challenge you...</string>
    <string name="how_many_kilometer_do_you_want_to_run_through_each_day">How many kilometers do you plan to run each day ?</string>
    <string name="enter_your_distance_goal">Distance (in km)</string>
    <string name="enter_your_time">Time(in minute)</string>
    <string name="how_many_path_do_you_want_to_draw_each_day">How many paths do you plan to draw each day ?</string>
...
