...
            android:textColor="@color/design_default_color_surface"
            android:textIsSelectable="false"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/endProfileCreation_text_userProfileCreation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/cardview_shadow_start_color"
            android:textColor="@color/design_default_color_surface"
            android:textSize="15sp" />
...
